--- a/test2.Rmd
+++ b/test2.Rmd
@@ -1,10 +1,13 @@
 ---
 layout: page
 title: "Test"
-author: "Mindy Mallory"
-date: "November 23, 2015"
-output: html_document
+output: md_document
 ---
+
+
+```{r, echo=FALSE}
+knitr::opts_chunk$set(fig.path='images/testing-')
+```
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
