--- a/_posts/2015-11-23-test2.md
+++ b/_posts/2015-11-23-test2.md
@@ -32,6 +32,6 @@ You can also embed plots, for example:
 plot(cars)
 ```
 
-![plot of chunk unnamed-chunk-3](mindymallory.github.io/images/testing-unnamed-chunk-3-1.png) 
+![plot of chunk unnamed-chunk-3]({{ site.url }}/images/testing-unnamed-chunk-3-1.png) 
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
