--- a/_drafts/publications.Rmd
+++ b/_drafts/publications.Rmd
@@ -22,3 +22,11 @@ nocite: |
 \setlength{\parskip}{8pt}
 
 
+
+```{r, include=FALSE}
+   # add this chunk to end of mycode.rmd
+   file.rename(from="_drafts/publications.md", 
+               to="publications.md")
+```
+
+
