--- a/_drafts/publications.Rmd
+++ b/_drafts/publications.Rmd
@@ -2,7 +2,7 @@
 layout: page
 title: "Publications"
 date: "Updated November 25, 2015"
-output: md_document
+output: pdf_document
 bibliography: mypubs.bib
 csl: year-ajae.txt
 nocite: |
@@ -12,7 +12,26 @@ nocite: |
 ---
 
 
+<!--
+To update this page:
 
+1. Update mypubs.bib
+2. Add the key to hte nocite parameter in the YAML header
+3. Knit
+4. Front matter in .md document is missing so open publications.md in the root directory and type
+---
+layout: page
+title: Publications
+comments: False
+permalink: /publications/
+---
+
+To generate pdf: 
+
+1. Change YAML "output: pdf_document"
+2. Comment out the r code chunk at the bottom
+
+-->
 
 
 
@@ -22,12 +41,19 @@ nocite: |
 \setlength{\leftskip}{0.2in}
 \setlength{\parskip}{8pt}
 
-
+<!--
 
 ```{r, include=FALSE}
-   # add this chunk to end of mycode.rmd
+  # For .md 
+  # This adds the file to the root so Jekyll will include it in the site build
    file.rename(from="C:/Users/mallorym/Documents/GitHub/mindymallory.github.io/_drafts/publications.md", 
                to="C:/Users/mallorym/Documents/GitHub/mindymallory.github.io/publications.md")
 ```
+-->
 
-
+```{r, include=FALSE}
+  # For .pdf 
+  # This adds the file to the root so Jekyll will include it in the site build
+   file.rename(from="C:/Users/mallorym/Documents/GitHub/mindymallory.github.io/_drafts/publications.pdf", 
+               to="C:/Users/mallorym/Documents/GitHub/mindymallory.github.io/publications.pdf")
+```
